# python-boilerplate

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
tests/: test_python_boilerplate.py
